; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_votrax.c_Votrax_Start.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_votrax.c_Votrax_Start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32*, %struct.Votrax_interface* }
%struct.Votrax_interface = type { i32 }
%struct.TYPE_5__ = type { i32, i32 }

@votraxsc01_locals = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@PhonemeData = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Votrax_Start(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = call i32 @memset(%struct.TYPE_4__* @votraxsc01_locals, i32 0, i32 24)
  %9 = load i8*, i8** %2, align 8
  %10 = bitcast i8* %9 to %struct.Votrax_interface*
  store %struct.Votrax_interface* %10, %struct.Votrax_interface** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @votraxsc01_locals, i32 0, i32 3), align 8
  store i32 63, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @votraxsc01_locals, i32 0, i32 0), align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %37, %1
  %12 = load i32, i32* %3, align 4
  %13 = icmp sle i32 %12, 63
  br i1 %13, label %14, label %40

14:                                               ; preds = %11
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @PhonemeData, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %7, align 4
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** @PhonemeData, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @time_to_samples(i32 %26)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* %7, align 4
  %30 = add nsw i32 %28, %29
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* %4, align 4
  %33 = icmp sgt i32 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %14
  %35 = load i32, i32* %6, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %34, %14
  br label %37

37:                                               ; preds = %36
  %38 = load i32, i32* %3, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %3, align 4
  br label %11

40:                                               ; preds = %11
  %41 = load i32, i32* %4, align 4
  %42 = sext i32 %41 to i64
  %43 = mul i64 %42, 4
  %44 = trunc i64 %43 to i32
  %45 = call i64 @Util_malloc(i32 %44)
  %46 = inttoptr i64 %45 to i32*
  store i32* %46, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @votraxsc01_locals, i32 0, i32 2), align 8
  %47 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @votraxsc01_locals, i32 0, i32 0), align 8
  %48 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @votraxsc01_locals, i32 0, i32 1), align 4
  %49 = call i32 @PrepareVoiceData(i32 %47, i32 %48)
  ret i32 0
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @time_to_samples(i32) #1

declare dso_local i64 @Util_malloc(i32) #1

declare dso_local i32 @PrepareVoiceData(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
